2004-03-14 19:42  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSView.m (-hitTest:): Don't require that the point is
	inside our super view if we don't have a super view.

2004-03-14 19:29  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSTableView.m (-mouseDown:): Send the action for simple
	clicks even if the selection changed.

2004-03-13 03:19  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSLayoutManager.m
	(-textStorage:edited:range:changeInLength:invalidatedRange:): Handle
 	the case where layout_char is inside the modified range explicitly to
	avoid accidentally causing the value to wrap around.

	(-drawGlyphsForGlyphRange:atPoint:): Remove dead (since the change
	2003-11-01) code. Update comments.

2004-03-12  Quentin Mathe <qmathe@club-internet.fr>

        * Source/GSToolbarView.m: Bug fixes related to clipped items and more
	efficient code.
	* Headers/Additions/GNUstepGUI/GSToolbarView.h: Minor changes.
        * Source/NSToolbar.m: Refactored NSToolbar implementation, most part of
	the code has moved to GSToolbar.
        * Headers/AppKit/NSToolbar.h: Same.
	* Source/GSToolbar.m: New class which implements functionnality for the
	basic GNUstep toolbars with some bug fixes.
        * Headers/Additions/GNUstepGUI/GSToolbar.h: Header for the new basic
	GNUstep toolbar class.
	* Source/NSWindow+Toolbar.m: Bug fixes.
	* Source/NSWindow+Toolbar.h: Minor changes.

2004-03-12 15:30  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSTableView.m (-mouseDown:): Send our action if we get
	a single, simple (no drag) click.

2004-03-08 19:19  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSPageLayout.m (-readPrintInfo): Move declarations before
	statements.

2004-03-08 19:04  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSComboBoxCell.m (-runModalPopUp): Don't make the popup
	the key window.

2004-03-08  Fred Kiefer <FredKiefer@gmx.de>

	* Header/AppKit/NSView.h: