@@ -1,3 +1,11 @@
+2004-03-22 01:13  Alexander Malmberg <alexander@malmberg.org>
+
+	* Source/NSLayoutManager.m
+	(-textStorage:edited:range:changeInLength:invalidatedRange:): Update
+	layout_char, glyph_delta, and new_last_glyph only if it makes sense
+	to do so and we need the value.	Clarify and correct layout_char
+	update. Add comments.
+
 2004-03-14 19:42  Alexander Malmberg <alexander@malmberg.org>
 
 	* Source/NSView.m (-hitTest:): Don't require that the point is
